--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mpociot/documentarian",
+  "name": "vadikv/documentarian",
   "description": "",
   "keywords": [],
   "license": "Apache 2",
