--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "vadikv/documentarian",
   "description": "",
   "keywords": [],
-  "license": "Apache 2",
+  "license": "MIT",
   "authors": [
     {
       "name": "Marcel Pociot",
